--- a/client/styles/globals.css
+++ b/client/styles/globals.css
@@ -52,3 +52,10 @@ a {
     background: black;
   }
 }
+
+.header-blog h2 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 300px;
+}
