--- a/client/styles/globals.css
+++ b/client/styles/globals.css
@@ -53,9 +53,20 @@ a {
   }
 }
 
-.header-blog h2 {
+.header-blog {
+  background: rgb(2, 0, 36);
+  background: linear-gradient(
+    90deg,
+    rgba(2, 0, 36, 1) 0%,
+    rgba(9, 9, 121, 1) 35%,
+    rgba(0, 212, 255, 1) 100%
+  );
+  color: #ffffff;
+}
+.header-blog {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 300px;
+  height: 400px;
 }
