--- a/client/styles/glitchText.module.scss
+++ b/client/styles/glitchText.module.scss
@@ -1,8 +1,12 @@
 .glitch {
   color: #15948a;
-  font-size: 40px;
+  font-size: 64px;
   position: relative;
   margin: 0 auto;
+
+  @media screen and (max-width: 768px) {
+    font-size: 30px;
+  }
 }
 @keyframes noise-anim {
   $steps: 20;
@@ -19,7 +23,7 @@
   text-shadow: -1px 0 red;
   top: 0;
   color: white;
-  background: black;
+  background: #15948a;
   overflow: hidden;
   clip: rect(0, 900px, 0, 0);
   animation: noise-anim 2s infinite linear alternate-reverse;
@@ -40,7 +44,7 @@
   text-shadow: 1px 0 blue;
   top: 0;
   color: white;
-  background: black;
+  background: #15948a;
   overflow: hidden;
   clip: rect(0, 900px, 0, 0);
   animation: noise-anim-2 3s infinite linear alternate-reverse;
