--- a/client/styles/Header.module.scss
+++ b/client/styles/Header.module.scss
@@ -8,9 +8,9 @@
   justify-content: center;
   width: 100%;
   height: 64px;
-  background: #19191c;
-  color: #f9f9f9;
-  font-family: "Poppins";
+  background: #14948a;
+  color: #ffffff;
+  font-family: "Inter", sans-serif;
   box-sizing: border-box;
 }
 
