--- a/client/styles/globals.css
+++ b/client/styles/globals.css
@@ -8,29 +8,12 @@ body {
 a {
   color: inherit;
   text-decoration: none;
+  cursor: pointer;
 }
 
 * {
   box-sizing: border-box;
   font-family: "Inter", sans-serif;
-}
-
-.navbar-brand {
-  font-weight: 500;
-}
-
-.navbar-nav .nav-item {
-  font-size: 14px;
-}
-
-.navbar-nav .nav-item.login-cta {
-  border-radius: 4px;
-  padding: 4px 16px !important;
-  display: flex;
-  align-items: center;
-  margin-left: 20px;
-  background: #2e2e2e;
-  color: #ffffff;
 }
 
 .mantine-RichTextEditor-toolbar {
