--- a/client/styles/Header.module.scss
+++ b/client/styles/Header.module.scss
@@ -100,7 +100,7 @@
   visibility: visible;
 }
 
-@media only screen and (min-width: 768) {
+@media only screen and (min-width: 768px) {
   .navbarmenu {
     position: static;
     translate: 0 0;
