--- a/client/styles/globals.css
+++ b/client/styles/globals.css
@@ -14,7 +14,7 @@ a {
 * {
   box-sizing: border-box;
   font-family: "Inter", sans-serif;
-  background-color: black;
+  /* background-color: black; */
 }
 
 .mantine-RichTextEditor-toolbar {
