--- a/client/styles/globals.css
+++ b/client/styles/globals.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 html,
 body {
   padding: 0;
@@ -14,7 +18,6 @@ a {
 * {
   box-sizing: border-box;
   font-family: "Inter", sans-serif;
-  /* background-color: black; */
 }
 
 .mantine-RichTextEditor-toolbar {
